# gnome-themes-extras

./: .cvsignore  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  gnome-themes-extras.doap  gnome-themes-extras.spec.in
Amaranth/: index.theme.in
Amaranth/gtk-2.0/: .cvsignore  Makefile.am  README  gtkrc  gtkrc.in  iconrc.in
Amaranth/icons/: index.theme.in
Amaranth/icons/scalable/apps/: Makefile.am  Makefile.in
Amaranth/icons/scalable/mimetypes/: Makefile.am
Amaranth/icons/scalable/stock/: Makefile.am
Amaranth/metacity-1/: Makefile.am  NEWS  metacity-theme-1.xml
BlueSphere/: Makefile.am
BlueSphere/gtk-2.0/: Makefile.am  gtkrc  iconrc  iconrc.in
BlueSphere/icons/: Makefile.am  index.theme.in
BlueSphere/icons/scalable/stock/: Makefile.am
BlueSphere/metacity-1/: Makefile.am
Foxtrot/: Makefile.am  README
Foxtrot/16x16/: Makefile.am
Foxtrot/22x22/status/: Makefile.am
Foxtrot/24x24/places/: Makefile.am
Foxtrot/scalable/: Makefile.am
Foxtrot/scalable/actions/: Makefile.am
Foxtrot/scalable/places/: Makefile.am
Galaxy/: Makefile.am  index.theme.in
Galaxy/gtk-2.0/: Makefile.am  galaxy_rc_style.c  galaxy_rc_style.h  galaxy_style.h  galaxy_theme_draw.c  galaxy_theme_main.c
Galaxy/metacity/: Makefile.am
Gorilla/: Makefile.am  index.theme.in
Gorilla/gtk/: gtkrc
Gorilla/gtk-2.0/: Makefile.am  gtkrc  iconrc.in
Gorilla/icons/: index.theme  index.theme.in
Gorilla/icons/scalable/apps/: Makefile.am
Gorilla/icons/scalable/devices/: Makefile.am
Gorilla/icons/scalable/emblems/: Makefile.am
Gorilla/icons/scalable/mimetypes/: Makefile.am
Gorilla/metacity-1/: ChangeLog.old  metacity-theme-1.xml
Industrial/: Makefile.am  industrial_style.c
Industrial/gtk-2.0/: .cvsignore  Makefile.am  gtkrc.in
Lush/: Makefile.am  index.theme.in
Lush/gtk-2.0/: iconrc.in
Lush/icons/: Makefile.am  index.theme.in
Lush/icons/scalable/apps/: Makefile.am
Lush/icons/scalable/stock/: Makefile.am
Lush/metacity-1/: metacity-theme-1.xml
Nuvola/: Makefile.am  index.theme.in
Nuvola/gtk-2.0/: Makefile.am  NEWS  README  gtkrc  iconrc  iconrc.in  smooth_rc_style.c  smooth_rc_style.h  smooth_style.c  smooth_style.h
Nuvola/gtk-2.0/utils/: draw_fill.h  draw_gradients.c  draw_gradients.h  draw_grips.c  misc_functions.c  misc_functions.h
Nuvola/icons/: index.theme.in
Nuvola/icons/scalable/apps/: Makefile.am
Nuvola/icons/scalable/devices/: Makefile  Makefile.am  Makefile.in
Nuvola/metacity-1/: Makefile.am  metacity-theme-1.xml
Smooth/: Makefile.am  smooth_gtk2_engine.c  smooth_rc_style.c  smooth_rc_style.h  smooth_style.c  smooth_style.h  smooth_theme_main.c
Smooth/utils/: draw_arrows.c  draw_fill.c  misc_functions.c  misc_functions.h
Wasp/: .cvsignore  LICENSE
Wasp/gtk-2.0/: .cvsignore  iconrc.in
Wasp/icons/: index.theme.in
Wasp/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/Darklooks/: Makefile.am  index.theme.in
desktop-themes/Unity/: Makefile.am  Makefile.in  index.theme.in  index.theme.ine  index.themee
gtk-themes/: Makefile.am
icon-themes/: Makefile.am
icon-themes/Foxtrot/: AUTHORS  Makefile.am  index.theme.in
icon-themes/Foxtrot/16x16/actions/: Makefile.am
icon-themes/Foxtrot/16x16/places/: Makefile.am
icon-themes/Foxtrot/16x16/status/: Makefile.am
icon-themes/Foxtrot/22x22/actions/: Makefile.am
icon-themes/Foxtrot/22x22/places/: Makefile.am
icon-themes/Foxtrot/24x24/: Makefile.am
icon-themes/Foxtrot/24x24/actions/: Makefile.am
icon-themes/Foxtrot/24x24/status/: Makefile.am
icon-themes/Foxtrot/scalable/: Makefile.am
icon-themes/Foxtrot/scalable/categories/: Makefile.am
icon-themes/Foxtrot/scalable/places/: Makefile.am
icon-themes/Foxtrot/scalable/status/: Makefile.am
icon-themes/Neu/: AUTHORS  Makefile.am  index.theme.in
icon-themes/Neu/128x128/: Makefile.am
icon-themes/Neu/128x128/actions/: Makefile.am
icon-themes/Neu/128x128/apps/: Makefile.am
icon-themes/Neu/128x128/categories/: Makefile.am
icon-themes/Neu/128x128/devices/: Makefile.am
icon-themes/Neu/128x128/emblems/: Makefile.am
icon-themes/Neu/128x128/mimetypes/: Makefile.am
icon-themes/Neu/128x128/places/: Makefile.am
icon-themes/Neu/128x128/status/: Makefile.am
icon-themes/Neu/22x22/actions/: Makefile.am
icon-themes/Neu/22x22/apps/: Makefile.am
icon-themes/Neu/22x22/categories/: Makefile.am
icon-themes/Neu/22x22/devices/: Makefile.am
icon-themes/Neu/22x22/emblems/: Makefile.am
icon-themes/Neu/22x22/mimetypes/: Makefile.am
icon-themes/Neu/22x22/places/: Makefile.am
icon-themes/Neu/22x22/status/: Makefile.am
icon-themes/Neu/24x24/actions/: Makefile.am
icon-themes/Neu/24x24/apps/: Makefile.am
icon-themes/Neu/24x24/categories/: Makefile.am
icon-themes/Neu/24x24/devices/: Makefile.am
icon-themes/Neu/24x24/mimetypes/: Makefile.am
icon-themes/Neu/24x24/places/: Makefile.am
icon-themes/Neu/24x24/status/: Makefile.am
icon-themes/Neu/48x48/actions/: Makefile.am
icon-themes/Neu/48x48/apps/: Makefile.am
icon-themes/Neu/48x48/categories/: Makefile.am
icon-themes/Neu/48x48/devices/: Makefile.am
icon-themes/Neu/48x48/emblems/: Makefile.am
icon-themes/Neu/48x48/mimetypes/: Makefile.am
icon-themes/Neu/48x48/places/: Makefile.am
icon-themes/Neu/48x48/status/: Makefile.am
icon-themes/Neu/scalable/actions/: Makefile.am
icon-themes/Neu/scalable/apps/: Makefile.am
icon-themes/Neu/scalable/categories/: Makefile.am
icon-themes/Neu/scalable/devices/: Makefile.am
icon-themes/Neu/scalable/emblems/: Makefile.am
icon-themes/Neu/scalable/mimetypes/: Makefile.am
icon-themes/Neu/scalable/places/: Makefile.am
icon-themes/Neu/scalable/status/: Makefile.am
metacity-themes/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  az.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  mr.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  (+20 more)
(+121 files in other folders)
