AC_PREREQ(2.52)
AC_INIT(gnome-themes-extras, 0.10.0)

AM_CONFIG_HEADER(config.h)

ACLOCAL_FLAGS="-I m4"
AC_SUBST(ACLOCAL_AMFLAGS, $ACLOCAL_FLAGS)

AM_INIT_AUTOMAKE([1.9 tar-pax])

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"


GETTEXT_PACKAGE=gnome-themes-extras
AC_SUBST(GETTEXT_PACKAGE)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.23])
AC_PROG_CC
AC_PROG_INSTALL

# No static please
AM_DISABLE_STATIC

# Initialize libtool
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK_ENGINES_2,
		  gtk-engines-2 >= 2.11.0,,
		  AC_MSG_ERROR([gtk-engines-2 is required to compile gnome-themes-extras]))

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AS_AC_EXPAND(DATADIR, $datadir)

# Checks for endianness (needed by GdkRgb).
AC_C_BIGENDIAN

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_MMAP
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(setenv putenv)

ALL_LINGUAS="ar az bg ca cs da de dz el en_CA en_GB es fi fr gl he hr hu it ja ko lt nb ne nl pa pl pt pt_BR ru rw sk sl sq sr sr@Latn sv tr uk vi zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-themes-extras.spec
po/Makefile.in
])
