AC_PREREQ(2.53)
AC_INIT(gnome-themes-extras, 0.10.0)

AM_CONFIG_HEADER(config.h)

ACLOCAL_FLAGS="-I m4"
AC_SUBST(ACLOCAL_AMFLAGS, $ACLOCAL_FLAGS)

AM_INIT_AUTOMAKE([1.9 tar-pax])

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

GETTEXT_PACKAGE=gnome-themes-extras
AC_SUBST(GETTEXT_PACKAGE)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.23])
AC_PROG_CC
AC_PROG_INSTALL

# No static please
AM_DISABLE_STATIC

# Initialize libtool
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK_ENGINES_2,
		  gtk-engines-2 >= 2.11.0,,
		  AC_MSG_ERROR([gtk-engines-2 is required to compile gnome-themes-extras]))

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AS_AC_EXPAND(DATADIR, $datadir)

# Checks for endianness (needed by GdkRgb).
AC_C_BIGENDIAN

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_MMAP
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(setenv putenv)

ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

UTILS_REQUIRED=0.8.1


AC_MSG_CHECKING([icon-naming-utils >= $UTILS_REQUIRED])
PKG_CHECK_EXISTS(icon-naming-utils >= $UTILS_REQUIRED,
                 have_utils=yes, have_utils=no)
if test "x$have_utils" = "xyes"; then
	UTILS_PATH="`$PKG_CONFIG --variable=program_path icon-naming-utils`"
	ICONMAP="$UTILS_PATH/icon-name-mapping"
	AC_SUBST(ICONMAP)
	AC_MSG_RESULT([yes])
else
	AC_MSG_RESULT([no])
	AC_MSG_ERROR([icon-naming-utils >= $UTILS_REQUIRED is required to build
	                and install gnome-icon-theme])
fi

AC_OUTPUT([
Makefile
gnome-themes-extras.spec
Foxtrot/Makefile
Foxtrot/16x16/Makefile
Foxtrot/16x16/actions/Makefile
Foxtrot/16x16/places/Makefile
Foxtrot/22x22/Makefile
Foxtrot/22x22/actions/Makefile
Foxtrot/22x22/places/Makefile
Foxtrot/22x22/status/Makefile
Foxtrot/24x24/Makefile
Foxtrot/24x24/actions/Makefile
Foxtrot/24x24/places/Makefile
Foxtrot/scalable/Makefile
Foxtrot/scalable/actions/Makefile
Foxtrot/scalable/categories/Makefile
Foxtrot/scalable/devices/Makefile
Foxtrot/scalable/places/Makefile
Foxtrot/scalable/status/Makefile
po/Makefile.in
])
