themedir = $(datadir)/themes/Amaranth/gtk-2.0
theme_DATA = \
	arrow-down-i.png \
	arrow-down.png \
	arrow-left-i.png \
	arrow-left.png \
	arrow-menu-left.png \
	arrow-menu-right.png \
	arrow-right-i.png \
	arrow-right.png \
	arrow-up-i.png \
	arrow-up.png \
	box-in.png \
	box-out.png \
	check-n.png \
	check-s.png \
	cuthere.png \
	default.png \
	ext-in-bottom.png \
	ext-in-left.png \
	ext-in-right.png \
	ext-in-top.png \
	ext-out-bottom.png \
	ext-out-left.png \
	ext-out-right.png \
	ext-out-top.png \
	focus.png \
	gap-end.png \
	gap.png \
	gap-start.png \
	handle-h.png \
	handle-v.png \
	hline.png \
	light.png \
	progress.png \
	radio-n.png \
	radio-s.png \
	shadow-in.png \
	shadow-menu.png \
	shadow-notebook-bottom.png \
	shadow-notebook-left.png \
	shadow-notebook-right.png \
	shadow-notebook-top.png \
	shadow-out.png \
	slider-h.png \
	slider-v.png \
	spin-down-i.png \
	spin-down.png \
	spin-up-i.png \
	spin-up.png \
	stepper-down.png \
	stepper-left.png \
	stepper-right.png \
	stepper-up.png \
	test.png \
	thumb-grip-h.png \
	thumb-grip-v.png \
	thumb.png \
	trough-h.png \
	trough-v.png \
	vline.png \
	gtkrc 

EXTRA_DIST = $(theme_DATA) README NEWS
