themedir = $(datadir)/themes/Amaranth/metacity-1

theme_DATA=  \
	button-close-focus.png \
	button-close.png \
	button-inactive.png \
	metacity-theme-1.xml \
	button-max-focus.png \
	button-max.png \
	button-min-focus.png \
	button-min.png \
	left-side-inactive.png\
	left-side.png \
	menu-button.png \
	menu-button-pressed.png \
	right-side-inactive.png \
	right-side.png \
	title-bar-inactive.png \
	title-bar.png
EXTRA_DIST = $(theme_DATA)
