themedir = $(datadir)/themes/BlueSphere/gtk-2.0

theme_DATA=  \
gtkrc \
iconrc \
arrow_down_clicked.svg \
arrow_down_normal.svg \
arrow_left_normal.svg \
arrow_left_clicked.svg \
arrow_right_clicked.svg \
arrow_right_normal.svg \
arrow_up_clicked.svg \
arrow_up_normal.svg \
background.png \
blank.png \
box_gap_bottom_end.png \
box_gap_bottom_focus.png \
box_gap_bottom.png \
box_gap_bottom_start.png \
box_gap_left_end.png \
box_gap_left_focus.png \
box_gap_left.png \
box_gap_left_start.png \
box_gap_right_end.png \
box_gap_right_focus.png \
box_gap_right.png \
box_gap_right_start.png \
box_gap_top_end.png \
box_gap_left_focus.png \
box_gap_left.png \
box_gap_left_start.png \
box_gap_right_end.png \
box_gap_right_focus.png \
box_gap_right.png \
box_gap_right_start.png \
box_gap_top_end.png \
box_gap_top_focus.png \
box_gap_top.png \
box_gap_top_start.png \
button_active_in.png \
button_insensitive_in.png \
button_insensitive_out.png \
button_normal_in.png \
button_normal_out.png \
button_prelight_out.png \
button_selected_in.png \
check_in.png \
check_out.png \
clear.png \
curve_background.png \
entry_bg.png \
etched.png \
extension_active_left.png \
extension_active_right.png \
extension_left.png \
extension_right.png \
extraA_box.png \
extraB_box.png \
frame_gap.png \
frame_gap_top_end.png \
frame_gap_top_start.png \
handle_bar.png \
handlebox.png \
handle_vert_thumb.png \
horizontal_line.png \
horizontal_trough.png \
horzontal_ruler.png \
item_insensitive.png \
item.png \
menu_background.png \
menubar_background.png \
menubar_option.png \
menu_hi-light.png \
menu_shadow.png \
notebook_active_bottom.png \
notebook_active_top.png \
notebook_bottom.png \
notebook_top.png \
notebook_unattached.png \
option_in.png \
option_out.png \
paned.png \
progressbar.png \
scrollbar_horizontal.svg \
scrollbar_prelight_horizontal.svg \
scrollbar_prelight_vertical.svg \
scrollbar_vertical.svg \
shadow_in.png \
shadow_out.png \
text_insensitive.png \
text_selected_insensitive.png \
text_selected.png \
toggle_clicked.png \
toggle_default.png \
tooltip.png \
trough.png \
vertical_line.png \
vertical_ruler.png \
vertical_trough.png \
window_background.png

EXTRA_DIST = $(theme_DATA)
