themedir = $(datadir)/themes/BlueSphere/metacity-1

theme_DATA=  \
metacity-theme-1.xml \
bg-bottom-rail.png \
bg-left-rail.png \
bg-right-rail.png \
bg-titlebar.png \
border-only-left-corner.png \
border-only-right-corner.png \
border-only-top.png \
button-close-down.png \
button-close-down-shaded.png \
button-close-up.png \
button-close-up-shaded.png \
button-maximize-down.png \
button-maximize-up.png \
button-minimize-down.png \
button-minimize-up.png \
corner-left-bottom.png \
corner-right-bottom.png \
titlebar-left-bumper.png \
titlebar-left-iconbg.png \
titlebar-left-iconbg-shaded.png \
titlebar-left-title.png \
titlebar-right-bumper.png
EXTRA_DIST = $(theme_DATA)
