dummy =
themedir = $(datadir)/themes/Industrial/gtk-2.0
theme_DATA =  \
	gtkrc \
	stock_apply.png \
	stock_bottom-16.png \
	stock_bottom.png \
	stock_cancel-16.png \
	stock_cancel.png \
	stock_down-16.png \
	stock_down.png \
	stock_first-16.png \
	stock_first.png \
	stock_last-16.png \
	stock_last.png \
	stock_left-16.png \
	stock_left.png \
	stock_ok.png \
	stock_refresh-16.png \
	stock_refresh.png \
	stock_right-16.png \
	stock_right.png \
	stock_top-16.png \
	stock_top.png \
	stock_up-16.png \
	stock_up.png


EXTRA_DIST = $(theme_DATA) gtkrc.in
