themedir = $(datadir)/themes/Nuvola/metacity-1

theme_DATA=  \
metacity-theme-1.xml \
bottom-left.png \
bottom.png \
bottom-right.png \
button-active.png \
button-close.png \
button-inactive.png \
button-max.png \
button-min.png \
left-edge.png \
left-shade.png \
left-side.png \
right-edge.png \
right-shade.png \
right-side.png \
shade-bar.png \
title-bar.png

EXTRA_DIST = $(theme_DATA)
