themedir = $(datadir)/themes/Wasp/metacity-1

theme_DATA=  \
metacity-theme-1.xml \
close-active.png \
close-inactive.png \
maximize-active.png \
maximize-inactive.png \
mid-title-active.png \
minimize-active.png \
minimize-inactive.png \
restore-active.png \
restore-inactive.png
EXTRA_DIST = $(theme_DATA)
