icondir = $(datadir)/icons/Amaranth/scalable/mimetypes
NULL = 
icon_DATA = \
        gnome-mime-application-pdf.svg \
        gnome-mime-application-pgp.svg \
        gnome-mime-application-x-rpm.svg \
        gnome-mime-audio.svg \
	gnome-mime-image-xcf.svg \
        gnome-mime-text.svg \
	gnome-mime-video.svg \
	$(NULL)
EXTRA_DIST = $(icon_DATA)

# install-data-local:
#	cd $(icondir) && ln -sf gnome-mime-application-x-font.svg gnome-mime-application-x-font-pcf.svg && ln -sf gnome-mime-application-x-font.svg gnome-mime-application-x-font-type1.svg && ln -sf gnome-mime-application-x-font.svg gnome-mime-application-x-font-linux-psf.svg && ln -sf gnome-mime-application-x-font.svg gnome-mime-application-x-font-bdf.svg && ln -sf gnome-mime-application-x-font.svg gnome-mime-application-x-font-afm.svg && ln -sf gnome-mime-audio.svg gnome-mime-application-x-ogg.svg && ln -sf gnome-compressed.svg gnome-mime-application-x-stuffit.svg

#uninstall-local:
#	rm -rf $(icondir)/gnome-mime-application-x-font-pcf.svg
#	rm -rf $(icondir)/gnome-mime-application-x-font-type1.svg
#	rm -rf $(icondir)/gnome-mime-application-x-font-linux-psf.svg
#	rm -rf $(icondir)/gnome-mime-application-x-font-bdf.svg
#	rm -rf $(icondir)/gnome-mime-application-x-font-afm.svg
#	rm -rf $(icondir)/gnome-mime-application-x-ogg.svg
#	rm -rf $(icondir)/gnome-mime-application-x-stuffit.svg
