icondir = $(datadir)/icons/Amaranth/scalable/stock
icon_DATA = \
        gnome-logo.svg \
	home.svg \
	stock_about.svg \
	stock_dialog_error.png \
	stock_dialog_info.png \
	stock_dialog_warning.png \
	stock_floppy.svg \
	stock-go_back.svg \
	stock-go_down.svg \
	stock-go_forward.svg \
	stock-go_up.svg \
	stock_help.svg \
	stock_lockscreen.svg \
	stock_new.svg \
	stock_open.svg
EXTRA_DIST = $(icon_DATA)
