icondir = $(datadir)/icons/Amaranth/scalable/stock
NULL =
icon_DATA = \
        gnome-logo.svg \
	stock_about.svg \
	stock_cdrom.svg \
	stock_dialog_error.png \
	stock_dialog_info.png \
	stock_dialog_warning.png \
	stock_floppy.svg \
	stock_go-back.svg \
	stock_go-forward.svg \
	stock_go-up.svg \
	stock_gtk-sort-ascending.svg \
	stock_gtk-sort-descending.svg \
	stock_help.svg \
	stock_home.svg \
	stock_lockscreen.svg \
	stock_new.svg \
	stock_open.svg \
	stock_preferences.svg \
	stock_print-preview.svg \
	stock_print.svg \
	stock_quit.svg \
	stock_redo.svg \
	stock_refresh.svg \
	stock_reset.svg \
	stock_run.svg \
	stock_stop.svg \
	stock_undo.svg \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
