icondir = $(datadir)/icons/BlueSphere/scalable/stock
icon_DATA = \
        3downarrow.svg \
	3uparrow.svg \
	arrow-down-dash.svg \
	arrow-down-2.0.svg \
	arrow-left.svg \
	arrow-right-2.0.svg \
	arrow-up-dash-2.0.svg \
	arrow-up.svg \
	button_cancel.svg \
	button_ok.svg \
	configure-b.svg \
	document_new.svg \
	edit_add.svg \
	editcopy-small.svg \
	editcut.svg \
	editdelete-2.1.svg \
	editdelete-small.svg \
	editpaste-2.1.svg \
	exec-small.svg \
	exit.svg \
	filenew.svg \
	fileopen.svg \
	filesave-2.1.svg \
	filesaveas.svg \
	filesave-small.svg \
	find.svg \
	gohome-2.2.svg \
	help.svg \
	kill.svg \
	noatunback.svg \
	noatunforward.svg \
	noatunpause.svg \
	noatunplay.svg \
	player_eject.svg \
	player_stop.svg \
	queue-b.svg \
	recycle.svg \
	redo-2.0.svg \
	reload-2.0.svg \
	revert-small.svg \
	star-button.svg \
	stock_cdrom.svg \
	stock_goto-last.svg \
	stock_no.svg \
	stock_print-preview.svg \
	stock_print.svg \
	stock_underline.svg \
 	stock_yes.svg \
	stop-2.1.svg \
	text_block.svg \
	text_bold.svg \
	text_center.svg \
	text_italic.svg \
	text_left.svg \
	text_right.svg \
	text_under.svg \
	undo-3.2.svg \
	viewmag-_2.svg \
	viewmagfit.svg
EXTRA_DIST = $(icon_DATA)
